# faker-geoscience

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
faker_geoscience/flora/: __init__.py
faker_geoscience/flora/el_GR/: __init__.py
faker_geoscience/geography/: __init__.py
faker_geoscience/geography/el_GR/: __init__.py
faker_geoscience/minerals/el_GR/: __init__.py
tests/: test_flora.py  test_geography.py  test_minerals.py
